# Dota-AI-Assistant

./: .gitignore  README.md  bot.py  pyproject.toml  setup.py
Data_Pipeline/: about.md
Data_Pipeline/steps/: __init__.py  get_transcription.py
Data_Pipeline/sub_systems/configs/: data_extraction_cfg_parser.py
Data_Pipeline/sub_systems/crawlers/: __init__.py  dispatcher.py  youtube_crawler.py
Dota_AI_Assistant.egg-info/: PKG-INFO  SOURCES.txt
ai/feature/: youtube_crawler.py
ai/pipelines/: pipelines.md
responces_samples/dividing_domains/: dividing_with_pydantic_output_parser.txt  dividing_with_union.txt
responces_samples/dividing_topics/: naming_errors.txt
responces_samples/summary/: summary_with_strOutputParser.txt
scripts/: data_ref.YAML  run_data_pipeline.py  scripts.md
src/: main.py  src.md
src/ai/llm_chains/: question_about_game_chain.py
src/ai/llm_chains/prompt_templates/: t_question_about_dota.py
src/ai/pipelines/: data_pipeline.py  pipelines.md
src/ai/pipelines/data_pipe/: data_pipe.py  dividing_topic_temp.py
src/ai/pipelines/data_pipe/steps/: config_parsing_step.py  dividing_temp.py  dividing_to_domains_step.py  dividing_to_topics_step.py  extracting_transcriptopn.py  summarization_step.py  url_extract_step.py  vectorization_step.py
src/bot/: handlers.py  keyboards.py  states.py
src/config/: config.py
src/vector_db/: init_qdrant.py  qdrant_client.py  qdrant_client_wrapper.py
test/ai_tests/: config_parser_test.py  data_ref.YAML  test_placeholder.py  try_langsmith.py  yt_crawler_test.py
(+10 files in other folders)
